docs/api/qiskit/0.39/qiskit.transpiler.CouplingMap.md
---
title: CouplingMap
description: API reference for qiskit.transpiler.CouplingMap
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.CouplingMap
---

# CouplingMap

<span id="qiskit.transpiler.CouplingMap" />

`CouplingMap(couplinglist=None, description=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Bases: `object`

Directed graph specifying fixed coupling.

Nodes correspond to physical qubits (integers) and directed edges correspond to permitted CNOT gates, with source and destination corresponding to control and target qubits, respectively.

Create coupling graph. By default, the generated coupling has no nodes.

**Parameters**

*   **couplinglist** (*list or None*) – An initial coupling graph, specified as an adjacency list containing couplings, e.g. \[\[0,1], \[0,2], \[1,2]]. It is required that nodes are contiguously indexed starting at 0. Missed nodes will be added as isolated nodes in the coupling map.
*   **description** (*str*) – A string to describe the coupling map.

## Methods

### add\_edge

<span id="qiskit.transpiler.CouplingMap.add_edge" />

`CouplingMap.add_edge(src, dst)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Add directed edge to coupling graph.

src (int): source physical qubit dst (int): destination physical qubit

### add\_physical\_qubit

<span id="qiskit.transpiler.CouplingMap.add_physical_qubit" />

`CouplingMap.add_physical_qubit(physical_qubit)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Add a physical qubit to the coupling graph as a node.

physical\_qubit (int): An integer representing a physical qubit.

**Raises**

**CouplingError** – if trying to add duplicate qubit

### compute\_distance\_matrix

<span id="qiskit.transpiler.CouplingMap.compute_distance_matrix" />

`CouplingMap.compute_distance_matrix()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Compute the full distance matrix on pairs of nodes.

The distance map self.\_dist\_matrix is computed from the graph using all\_pairs\_shortest\_path\_length. This is normally handled internally by the [`distance_matrix`](qiskit.transpiler.CouplingMap#distance_matrix "qiskit.transpiler.CouplingMap.distance_matrix") attribute or the [`distance()`](qiskit.transpiler.CouplingMap#distance "qiskit.transpiler.CouplingMap.distance") method but can be called if you’re accessing the distance matrix outside of those or want to pre-generate it.

### distance

<span id="qiskit.transpiler.CouplingMap.distance" />

`CouplingMap.distance(physical_qubit1, physical_qubit2)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Returns the undirected distance between physical\_qubit1 and physical\_qubit2.

**Parameters**

*   **physical\_qubit1** (*int*) – A physical qubit
*   **physical\_qubit2** (*int*) – Another physical qubit

**Returns**

The undirected distance

**Return type**

int

**Raises**

**CouplingError** – if the qubits do not exist in the CouplingMap

### draw

<span id="qiskit.transpiler.CouplingMap.draw" />

`CouplingMap.draw()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Draws the coupling map.

This function calls the `graphviz_draw()` function from the `retworkx` package to draw the [`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") object.

**Returns**

Drawn coupling map.

**Return type**

PIL.Image

### from\_full

<span id="qiskit.transpiler.CouplingMap.from_full" />

`classmethod CouplingMap.from_full(num_qubits, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a fully connected coupling map on n qubits.

**Return type**

[`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.coupling.CouplingMap")

### from\_grid

<span id="qiskit.transpiler.CouplingMap.from_grid" />

`classmethod CouplingMap.from_grid(num_rows, num_columns, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a coupling map of qubits connected on a grid of num\_rows x num\_columns.

**Return type**

[`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.coupling.CouplingMap")

### from\_heavy\_hex

<span id="qiskit.transpiler.CouplingMap.from_heavy_hex" />

`classmethod CouplingMap.from_heavy_hex(distance, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a heavy hexagon graph coupling map.

A heavy hexagon graph is described in:

[https://journals.aps.org/prx/abstract/10.1103/PhysRevX.10.011022](https://journals.aps.org/prx/abstract/10.1103/PhysRevX.10.011022)

**Parameters**

*   **distance** (*int*) – The code distance for the generated heavy hex graph. The value for distance can be any odd positive integer. The distance relates to the number of qubits by: $n = \frac{5d^2 - 2d - 1}{2}$ where $n$ is the number of qubits and $d$ is the `distance` parameter.
*   **bidirectional** (*bool*) – Whether the edges in the output coupling graph are bidirectional or not. By default this is set to `True`

**Returns**

A heavy hex coupling graph

**Return type**

[CouplingMap](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")

### from\_heavy\_square

<span id="qiskit.transpiler.CouplingMap.from_heavy_square" />

`classmethod CouplingMap.from_heavy_square(distance, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a heavy square graph coupling map.

A heavy square graph is described in:

[https://journals.aps.org/prx/abstract/10.1103/PhysRevX.10.011022](https://journals.aps.org/prx/abstract/10.1103/PhysRevX.10.011022)

**Parameters**

*   **distance** (*int*) – The code distance for the generated heavy square graph. The value for distance can be any odd positive integer. The distance relates to the number of qubits by: $n = 3d^2 - 2d$ where $n$ is the number of qubits and $d$ is the `distance` parameter.
*   **bidirectional** (*bool*) – Whether the edges in the output coupling graph are bidirectional or not. By default this is set to `True`

**Returns**

A heavy square coupling graph

**Return type**

[CouplingMap](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")

### from\_hexagonal\_lattice

<span id="qiskit.transpiler.CouplingMap.from_hexagonal_lattice" />

`classmethod CouplingMap.from_hexagonal_lattice(rows, cols, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a hexagonal lattice graph coupling map.

**Parameters**

*   **rows** (*int*) – The number of rows to generate the graph with.
*   **cols** (*int*) – The number of columns to generate the graph with.
*   **bidirectional** (*bool*) – Whether the edges in the output coupling graph are bidirectional or not. By default this is set to `True`

**Returns**

A hexagonal lattice coupling graph

**Return type**

[CouplingMap](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")

### from\_line

<span id="qiskit.transpiler.CouplingMap.from_line" />

`classmethod CouplingMap.from_line(num_qubits, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a coupling map of n qubits connected in a line.

**Return type**

[`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.coupling.CouplingMap")

### from\_ring

<span id="qiskit.transpiler.CouplingMap.from_ring" />

`classmethod CouplingMap.from_ring(num_qubits, bidirectional=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a coupling map of n qubits connected to each of their neighbors in a ring.

**Return type**

[`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.coupling.CouplingMap")

### get\_edges

<span id="qiskit.transpiler.CouplingMap.get_edges" />

`CouplingMap.get_edges()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Gets the list of edges in the coupling graph.

**Returns**

Each edge is a pair of physical qubits.

**Return type**

Tuple(int,int)

### is\_connected

<span id="qiskit.transpiler.CouplingMap.is_connected" />

`CouplingMap.is_connected()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Test if the graph is connected.

Return True if connected, False otherwise

### largest\_connected\_component

<span id="qiskit.transpiler.CouplingMap.largest_connected_component" />

`CouplingMap.largest_connected_component()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a set of qubits in the largest connected component.

### make\_symmetric

<span id="qiskit.transpiler.CouplingMap.make_symmetric" />

`CouplingMap.make_symmetric()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Convert uni-directional edges into bi-directional.

### neighbors

<span id="qiskit.transpiler.CouplingMap.neighbors" />

`CouplingMap.neighbors(physical_qubit)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return the nearest neighbors of a physical qubit.

Directionality matters, i.e. a neighbor must be reachable by going one hop in the direction of an edge.

### reduce

<span id="qiskit.transpiler.CouplingMap.reduce" />

`CouplingMap.reduce(mapping)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Returns a reduced coupling map that corresponds to the subgraph of qubits selected in the mapping.

**Parameters**

**mapping** (*list*) – A mapping of reduced qubits to device qubits.

**Returns**

A reduced coupling\_map for the selected qubits.

**Return type**

[CouplingMap](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")

**Raises**

**CouplingError** – Reduced coupling map must be connected.

### shortest\_undirected\_path

<span id="qiskit.transpiler.CouplingMap.shortest_undirected_path" />

`CouplingMap.shortest_undirected_path(physical_qubit1, physical_qubit2)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Returns the shortest undirected path between physical\_qubit1 and physical\_qubit2.

**Parameters**

*   **physical\_qubit1** (*int*) – A physical qubit
*   **physical\_qubit2** (*int*) – Another physical qubit

**Returns**

The shortest undirected path

**Return type**

List

**Raises**

**CouplingError** – When there is no path between physical\_qubit1, physical\_qubit2.

### size

<span id="qiskit.transpiler.CouplingMap.size" />

`CouplingMap.size()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return the number of physical qubits in this graph.

### subgraph

<span id="qiskit.transpiler.CouplingMap.subgraph" />

`CouplingMap.subgraph(nodelist)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/coupling.py "view source code")

Return a CouplingMap object for a subgraph of self.

nodelist (list): list of integer node labels

## Attributes

<span id="qiskit.transpiler.CouplingMap.description" />

### description

<span id="qiskit.transpiler.CouplingMap.graph" />

### graph

<span id="qiskit.transpiler.CouplingMap.distance_matrix" />

### distance\_matrix

Return the distance matrix for the coupling map.

<span id="qiskit.transpiler.CouplingMap.is_symmetric" />

### is\_symmetric

Test if the graph is symmetric.

Return True if symmetric, False otherwise

<span id="qiskit.transpiler.CouplingMap.physical_qubits" />

### physical\_qubits

Returns a sorted list of physical\_qubits

